# mcp-server

./: .gitignore  .gitleaks.toml  LICENSE  README.md
server/mcp_server_apmplus/: README.md  README_zh.md  pyproject.toml  requirements.txt  run.sh
server/mcp_server_apmplus/src/mcp_server_apmplus/: api.py  config.py  main.py  model.py  server.py
server/mcp_server_askecho/: README.md  pyproject.toml
server/mcp_server_askecho/src/mcp_server_askecho/: api.py  config.py  model.py  server.py
server/mcp_server_bytehouse/: README.md  README_zh.md  pyproject.toml  requirements.txt
server/mcp_server_bytehouse/mcp_bytehouse/: __init__.py  main.py  mcp_env.py  mcp_server.py
server/mcp_server_bytehouse/mcp_bytehouse/knowledge/: cnch_merge_tree.md  cnch_unique_merge_tree.md  distributed.md  ha_merge_tree.md  ha_unique_merge_tree.md
server/mcp_server_cloud_assistant/: README.md  pyproject.toml  requirements.txt
server/mcp_server_cloud_assistant/src/mcp_server_cloud_assistant/: config.py  server.py
server/mcp_server_cloudmonitor/: README.md  README_zh.md  mcp.json  pyproject.toml  requirements.txt  run.sh
server/mcp_server_cloudmonitor/src/mcp_server_cloudmonitor/: client.py  server.py  server_test.py  sse.py  stdio.py
server/mcp_server_cloudmonitor/src/mcp_server_cloudmonitor/utils/: top.py
server/mcp_server_cloudmonitor/src/models/: request.py
server/mcp_server_cloudmonitor/src/utils/: top.py
server/mcp_server_cloudsearch/: README.md  README_EN.md  README_zh.md  pyproject.toml  requirements.txt
server/mcp_server_cloudsearch/src/mcp_server_cloudsearch/: __init__.py  __main__.py  client.py  server.py
server/mcp_server_cloudsearch/src/mcp_server_cloudsearch/tools/: instance_info.py  resource_info.py
server/mcp_server_computer_use/: README.md  README_zh.md  pyproject.toml
server/mcp_server_computer_use/src/mcp_server_computer_use/: main.py
server/mcp_server_computer_use/src/mcp_server_computer_use/common/: client.py  config.py  errors.py  logs.py
server/mcp_server_computer_use/src/mcp_server_computer_use/tools/: __init__.py  computer.py
server/mcp_server_ebs/: README.md  pyproject.toml  requirements.txt  run.sh
server/mcp_server_ebs/src/mcp_server_ebs/: config.py  server.py
server/mcp_server_ecs/: README.md  README_zh.md  pyproject.toml  requirements.txt  settings.toml
server/mcp_server_ecs/src/mcp_server_ecs/: main.py  server.py
server/mcp_server_eip/: README.md  pyproject.toml
server/mcp_server_eip/src/mcp_server_eip/: main.py  server.py
server/mcp_server_enterprise/: README.md  README_zh.md  pyproject.toml
server/mcp_server_enterprise/src/trademark/: mcp_server.py  note.py  server.py
server/mcp_server_iot/: README.md  pyproject.toml
server/mcp_server_iot/src/iot/: mcp_server.py  note.py  server.py
server/mcp_server_las/: .gitignore  README.md  pyproject.toml  requirements.txt
server/mcp_server_las/src/mcp_server_las/: __init__.py  config.py  las_service.py  server.py  serverRemote.py  serverSse.py
server/mcp_server_mcdn/: README.md  README_zh.md  pyproject.toml
server/mcp_server_mcdn/src/mcdn/: mcp_server.py  note.py  server.py
server/mcp_server_mongodb/: README.md  pyproject.toml  requirements.txt
server/mcp_server_mongodb/src/mcp_server_mongodb/: server.py
server/mcp_server_na/: README.md  pyproject.toml
server/mcp_server_na/src/mcp_server_na/: main.py  server.py
server/mcp_server_nacos/: README.md  mcp.json  pyproject.toml  requirements.txt
server/mcp_server_nacos/src/mcp_server_nacos/: main.py  nacos_server.py  nacos_server_test.py  sign.py  sse.py  stdio.py  streamable_http.py
server/mcp_server_rds_mysql/: README.md  pyproject.toml  requirements.txt
server/mcp_server_rds_mysql/src/mcp_server_rds_mysql/: config.py  server.py
server/mcp_server_rds_postgresql/: README.md  README_zh.md  pyproject.toml  requirements.txt
server/mcp_server_rds_postgresql/src/mcp_server_rds_postgresql/: server.py
server/mcp_server_resourcecenter/: README.md  pyproject.toml  requirements.txt
server/mcp_server_resourcecenter/src/mcp_server_resourcecenter/: server.py
server/mcp_server_sec_agent/: Dockerfile  README.md  pyproject.toml  requirements.txt
server/mcp_server_sec_agent/src/mcp_server_sec_agent/: config.py  const.py  server.py
server/mcp_server_tls/: .env_example  .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml  requirements.txt  run.sh
server/mcp_server_tls/src/mcp_server_tls/: config.py  consts.py  main.py  reqeust.py  server.py  utils.py
server/mcp_server_tos/: .env_example  README.md  pyproject.toml  requirements.txt  run.sh
server/mcp_server_tos/src/mcp_server_tos/: config.py  credential.py  main.py  server.py
server/mcp_server_veapig/: README.md  mcp.json  pyproject.toml  requirements.txt
server/mcp_server_veapig/src/mcp_server_veapig/: sign.py  sse.py  stdio.py  veapig_server.py
server/mcp_server_vedb_mysql/: README.md  README_zh.md  pyproject.toml  requirements.txt
server/mcp_server_vedb_mysql/src/mcp_server_vedb_mysql/: config.py  server.py
server/mcp_server_vefaas_function/: README.md  mcp.json  pyproject.toml  requirements.txt  sign.py  sse.py  stdio.py  test_mcp_functionality.py  vefaas_server.py
server/mcp_server_vefaas_function/src/mcp_server_vefaas_function/: config_utils.py  main.py  sign.py  stdio.py  streamable_http.py  vefaas_server.py  vefaas_server_test.py
server/mcp_server_veimagex/: .gitignore  README.md  README_zh.md  pyproject.toml
server/mcp_server_veimagex/src/imagex/: mcp_extend.py  mcp_server.py  note.py  server.py
server/mcp_server_vikingdb/: README.md  README_zh.md  pyproject.toml
server/mcp_server_vikingdb/src/mcp_server_vikingdb/: config.py  server.py
server/mcp_server_vmp/: README.md  README_zh.md  pyproject.toml  requirements.txt  run.sh
server/mcp_server_vmp/src/mcp_server_vmp/: config.py  models.py  server.py  test.py  utils.py  vmpapi.py
server/mcp_server_vod/: .gitignore  README.md  README_zh.md  THIRD_PARTY_NOTICE.txt  pyproject.toml
server/mcp_server_vod/src/vevod_mcp/: __init__.py  cli.py  mcp_server.py
(+274 files in other folders)
