[project]
name = "mcp-server-apmplus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.7.1",
    "requests>=2.32.3",
    "volcengine-python-sdk>=3.0.1",
]

[project.scripts]
mcp-server-apmplus = "mcp_server_apmplus.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
mcp = { git = "https://github.com/zihengli-bytedance/python-sdk.git", rev = "temp-for-volc" }
