[project]
name = "mcp-server-cloud-assistant"
version = "0.1.0"
description = "Cloud Assistant MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.6.0",
    "volcengine-python-sdk==1.1.2",
]

[tool.uv.sources]
mcp = { git = "https://github.com/zihengli-bytedance/python-sdk.git", rev = "temp-for-volc" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-cloud-assistant = "mcp_server_cloud_assistant.server:main"
