[project]
name = "mcp-server-cloudsearch"
version = "0.1.0"
description = "MCP Server For CloudSearch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
    "volcengine-python-sdk>=3.0.1",
]

[project.scripts]
mcp-server-cloudsearch = "mcp_server_cloudsearch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"