[project]
name = "mcp-server-ecs"
version = "0.1.0"
description = "MCP Server for ECS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.6.0",
    "pydantic==2.10.6",
    "volcengine-python-sdk==1.1.2",
    "concurrent-log-handler==0.9.25",
    "dynaconf==3.2.10",
]

[project.scripts]
mcp-server-ecs = "mcp_server_ecs.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"