[project]
name = "mcp-server-las"
version = "0.1.0"
description = "MCP server for LAS search_logs API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "volcengine>=1.0.175",
    "mcp[cli]>=1.6.0",
]

[project.scripts]
mcp-server-las = "mcp_server_las.server:main"

[build-system]
requires = ["hatchling", "pydantic-core>=2.33.1", "pydantic>=2.0.0"]
build-backend = "hatchling.build"
[tool.hatch.metadata]
allow-direct-references = true
