[project]
name = "mcp_server_mongodb"
version = "0.1.0"
description = "MCP Server for Mongo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "volcengine-python-sdk",
]

[project.scripts]
mcp-server-ecs = "mcp_server_mongodb.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"