[project]
name = "mcp-server-nacos"
version = "0.0.1"
description = "MCP server for managing Nacos"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "volcengine-python-sdk>=3.0.14",
    "requests==2.32.3",
    "pyzipper==0.3.6",
    "mcp>=1.9.4",
]

[project.scripts]
mcp-server-nacos = "mcp_server_nacos.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
