[project]
name = "mcp-server-tos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.4.1",
    "tos>=2.8.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-server-tos = "mcp_server_tos.main:main"
