[project]
name = "mcp-server-veapig"
version = "0.0.1"
description = "MCP server for managing APIG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp @ git+https://github.com/zihengli-bytedance/python-sdk.git@temp-for-volc",
    "volcengine-python-sdk>=3.0.8",
    "requests==2.32.3",
    "pyzipper==0.3.6"
]

[project.scripts]
mcp-server-veapig = "mcp-server-veapig.stdio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
