[project]
name = "vefaas-function"
version = "0.0.1"
description = "MCP server for managing veFaaS (Volc Engine Function as a Service) functions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp==1.3.0",
    "volcengine-python-sdk==1.1.3",
]

[project.scripts]
vefaas-function = "stdio:main"

[tool.setuptools]
py-modules = ["stdio"]

