[project]
name = "mcp-server-vefaas-function"
version = "0.0.1"
description = "MCP server for managing veFaaS (Volc Engine Function as a Service) functions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp @ git+https://github.com/zihengli-bytedance/python-sdk.git@temp-for-volc",
    "volcengine-python-sdk>=3.0.2",
    "requests==2.32.3"
]

[project.scripts]
mcp-server-vefaas-function = "mcp_server_vefaas_function.stdio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
