[project]
name = "mcp-server-vikingdb"
version = "0.1.0"
description = "MCP server for VikingDB Service"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.5.0",
    "volcengine>=1.0.171",
    "aiohttp>=3.11.14",
    "deprecated>=1.2.18",
]

[project.scripts]
mcp-server-vikingdb = "mcp_server_vikingdb.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

