[project]
name = "mcp-server-vod"
version = "0.1.1"
description = "VolcEngine VOD MCP"
authors = []
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.6.0",
    "python-dotenv>=1.1.0",
    "volcengine>=1.0.177",
    "starlette>=0.14.2",
    "typing-extensions>=4.0.0",
    "pydantic>=1.8.2",
    "retry>=0.9.2"
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
mcp-server-vod = "vevod_mcp.cli:main"
